--- a/install/view/06_config.tmpl
+++ b/install/view/06_config.tmpl
@@ -2,21 +2,20 @@
 
 {block name="box"}
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
-	      <tr>
-	        <td width="109">System Name *</td>
-	        <td width="379"><input name="systemname" type="text" id="systemname" value="{if $fields.server}{$fields.server}{else}Todoyu{/if}" /></td>
-	      </tr>
-	      <tr>
-	        <td>System Email *</td>
-	        <td><input type="text" name="email" id="email" value="{$fields.username}" /></td>
-	      </tr>
-	      <tr>
-	        <td>Language</td>
-	        <td><select name="language" id="language">
-	          <option value="de">German (deutsch)</option>
-	          <option value="en">English (english)</option>
-	        </select>
-	        </td>
-	      </tr>
-	    </table>
+			<tr>
+				<td width="109">System Name *</td>
+				<td width="379"><input name="systemname" type="text" id="systemname" value="{if $fields.server}{$fields.server}{else}Todoyu{/if}" /></td>
+			</tr><tr>
+				<td>System Email *</td>
+				<td><input type="text" name="email" id="email" value="{$fields.username}" /></td>
+			</tr><tr>
+				<td>Language</td>
+				<td>
+					<select name="language" id="language">
+						<option value="de">German (deutsch)</option>
+						<option value="en">English (english)</option>
+					</select>
+				</td>
+			</tr>
+		</table>
 {/block}
