--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -2,17 +2,19 @@
 
 {block name="box"}
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
-	      <tr>
-	        <td width="90">Username</td>
-	        <td width="398">admin</td>
-	      </tr>
-	      <tr>
-	        <td id="passwordLabel">Password *</td>
-	        <td><input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" /></td>
-	      </tr>
-	      <tr>
-	        <td id="passwordConfirmLabel">Confirm Password *</td>
-	        <td><input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" id="password_confirm" /></td>
-	      </tr>
-	    </table>
+			<tr>
+				<td width="90">Username</td>
+				<td width="398">admin</td>
+			</tr><tr>
+				<td id="passwordLabel">Password *</td>
+				<td>
+					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" />
+				</td>
+			</tr><tr>
+				<td id="passwordConfirmLabel">Confirm Password *</td>
+				<td>
+					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" id="password_confirm" />
+				</td>
+			</tr>
+		</table>
 {/block}
