--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -12,7 +12,14 @@
 		<div id="box">
 			<div id="panel">
 				{include "licence.tmpl"}
-				{include "panel.tmpl"}
+				{* ------------ Panel -------------- *}
+				<div class="content">
+					<span class="lt"></span><span class="rt"></span>
+					<h1><span class="title">Todoyu 2.0</span><span class="rgt"></span></h1>
+					<img src="assets/img/banner.jpg">
+				</div>
+				<div class="panelFooter"></div>
+				{* ----------- Panel end ------------- *}
 			</div>
 			<div id="contentBox">
 				<span class="lt"></span>
@@ -40,7 +47,17 @@
 						</form><br />
 					</div>
 				</div>
-				<div id="footer">{include "footer.tmpl"}</div>
+				{* ------------------- Footer ----------------- *}
+				<div id="footer">
+					<div class="todoyuInfo" id="todoyu-info">
+						<p>
+							<strong>todoyu.</strong> Copyright &copy; 2006-{date_format constant(TODOYU_UPDATE) "%Y"} Snowflake Productions, Z&uuml;rich<br />
+							Extensions are copyright of their respective owners. Go to <a href="http://www.todoyu.com" target="_blank" style="text-decoration:underline">todoyu.com</a> for details. todoyu comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.<br />
+							Obstructing the appearance of this notice is prohibited by law.<br>
+							Installed version: {constant(TODOYU_VERSION)} ({constant(TODOYU_UPDATE)})
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
