--- a/install/assets/css/todoyu-installer.css
+++ b/install/assets/css/todoyu-installer.css
@@ -150,21 +150,25 @@ body {
    --------------------------- */
 
 #licenseagreement {
-    background-color:#fbfff0;
-    padding:20px 0 28px 24px;
+	background-color:#fbfff0;
+	padding:20px 0 28px 24px;
 }
-    #licenseagreement textarea {
-        width:580px;
-        height:270px;
-        font-size:12px;
-        letter-spacing:0.5px;
-        margin:8px 0 12px 0;
-    }
+	.enduserlicense {
+		width:580px;
+		height:270px;
+		border:1px solid #D6D6D6;
+		overflow-y:scroll;
+		background-color:#fff;
+		font-family:Courier;
+		font-size:12px;
+		letter-spacing:0.3px;
+		margin:8px 0 12px 0;
+	}
 	#licenseagreement h2 {
-    	font-weight:normal;
-	    font-size:11px;
-	    text-transform:uppercase;
-	    letter-spacing:1px;
+		font-weight:normal;
+		font-size:11px;
+		text-transform:uppercase;
+		letter-spacing:1px;
 	}
 
 
