--- a/install/view/01_welcome.tmpl
+++ b/install/view/01_welcome.tmpl
@@ -3,7 +3,7 @@
 {block name="box"}
 	<div id="licenseagreement">
 		<h2>End user license agreement for todoyu beta3</h2>
-		<textarea>{include "../../LICENSE.txt"}</textarea>
+		<div class="enduserlicense"><pre>{include "../../LICENSE.txt"}</pre></div>
 		<br />		
 		<button style="" id="agree" onclick="TodoyuInstaller.agreedToLicense(); return false;">
 			<span class="label">I accept the terms in the license agreement</span>
