--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -9,9 +9,10 @@
 				<td id="passwordLabel">Password *</td>
 				<td>
 					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" />
+					(at least 5 characters)
 				</td>
 			</tr><tr>
-				<td id="passwordConfirmLabel">Confirm Password *</td>
+				<td id="passwordConfirmLabel">Confirm&nbsp;Password&nbsp;*</td>
 				<td>
 					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" id="password_confirm" />
 				</td>
