--- a/install/view/03_dbconnection.tmpl
+++ b/install/view/03_dbconnection.tmpl
@@ -4,31 +4,31 @@
 	{$fieldsDisabled = 0}
 	{if $connectionHasBeenChecked}
 		{if $hasError == 1}
-			<strong>Please correct the Database connection setup below:</strong>
+			<strong>{Label installer.error.incorrectDbConnectionSetup}</strong>
 		{else}
 			<span style="padding:0 0 0 30px; width:300px;" class="servercheckicon ok">
-				<strong>Database server connection verified</strong>
+				<strong>{Label installer.affirm.dbServerConnectionOk}</strong>
 				{$fieldsDisabled = 1}
 			</span>
 		{/if}
 	{else}
-		<strong>Please enter the database server connection details:</strong>
+		<strong>{Label installer.instruction.enterDbConnectionDetails}</strong>
 	{/if}
 		<table width="500" border="0" cellspacing="0" cellpadding="3" style="margin-top:18px;">
 			<tr>
-				<td width="109">Server</td>
+				<td width="109">{Label installer.server}</td>
 				<td width="379">
 					<input name="server" type="text" id="server" value="{$fields.server|default:'localhost'}" />
 				</td>
 			</tr>
 			<tr>
-				<td>Username</td>
+				<td>{Label installer.username}</td>
 				<td>
 					<input type="text" name="username" id="username" value="{$fields.username|default:'root'}" />
 				</td>
 			</tr>
 			<tr>
-				<td id="passwordLabel">Password</td>
+				<td id="passwordLabel">{Label installer.password}</td>
 				<td>
 					<input type="password" name="password" id="password" value="{$fields.password}" />
 				</td>
