--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -3,16 +3,16 @@
 {block name="box"}
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
-				<td width="90">Username</td>
+				<td width="90">{Label installer.username}</td>
 				<td width="398">admin</td>
 			</tr><tr>
-				<td id="passwordLabel">Password *</td>
+				<td id="passwordLabel">{Label installer.password} *</td>
 				<td>
 					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" />
 					(at least 5 characters)
 				</td>
 			</tr><tr>
-				<td id="passwordConfirmLabel">Confirm&nbsp;Password&nbsp;*</td>
+				<td id="passwordConfirmLabel">{Label installer.repeatPassword} *</td>
 				<td>
 					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" id="password_confirm" />
 				</td>
