--- a/install/view/10_dbchanges.tmpl
+++ b/install/view/10_dbchanges.tmpl
@@ -13,7 +13,7 @@
 				</li>
 			{/foreach}
 			</ul>
-			{if count($diffs) == 0}Congratulations! your database is up to date.{/if}
+			{if count($diffs) == 0}{Label installer.affirm.dbIsUptodate}{/if}
 		</div>
 	</div>
 {/block}
