--- a/install/view/configs/db.php.tmpl
+++ b/install/view/configs/db.php.tmpl
@@ -21,10 +21,10 @@
 ***************************************************************/
 
 $CONFIG['DB'] = array(
-	'server'		=> '{$db.server}',
-	'username'		=> '{$db.username}',
-	'password'		=> '{$db.password}',
-	'database'		=> '{$db.database}',
+	'server'		=> '{$server}',
+	'username'		=> '{$username}',
+	'password'		=> '{$password}',
+	'database'		=> '{$database}',
 	'autoconnect'	=> true,
 	'persistent'	=> true,
 	'debug'			=> false,
