--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -31,7 +31,7 @@
 							<span class="rgt"></span>
 						</h1>
 						{if $text}<p  class="{$textClass}">{$text}</p>{/if}
-						<form style="padding-left:12px;" method="post">
+						<form method="post" action="index.php" style="padding-left:12px;" >
 							{* ------------ Content ---------------------- *}
 							<div class="blockcontent">{block name="box"}{/block}</div>
 							{* ----------- Submit: goto next step -------- *}
