--- a/install/view/licence.tmpl
+++ b/install/view/licence.tmpl
@@ -1,8 +1,11 @@
 <div class="content">
-<h1><span class="title">Licence information</span><span class="rgt"></span></h1>
+<h1>
+	<span class="title">{Label installer.panel.title.licenseInformation}</span>
+	<span class="rgt"></span>
+</h1>
 	<div class="text textInfo">
 		<ul>
-			<li>1. todoyu 2.0 Beta 1 Release</li>
+			<li>1. todoyu 2.0 Beta 3 Release</li>
 			<li>2. the following external tools:
 				<ul>
 					<li>TinyMCE</li>
