--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -5,7 +5,7 @@
 			<strong>Database creation / select failed please correct the setup</strong>
 		{else}
 			 <span style="padding:0 0 0 30px; width:300px;" class="servercheckicon ok">
-				Database server connection validated.
+				<strong>Database server connection validated.</strong>
 			</span> 
 		{/if}
 		<br /><br />
