--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -8,13 +8,13 @@
 			</tr><tr>
 				<td id="passwordLabel">{Label installer.password} *</td>
 				<td>
-					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" />
+					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" value="" />
 					(at least 5 characters)
 				</td>
 			</tr><tr>
 				<td id="passwordConfirmLabel">{Label installer.repeatPassword} *</td>
 				<td>
-					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" id="password_confirm" />
+					<input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" value="" id="password_confirm" />
 				</td>
 			</tr>
 		</table>
