--- a/install/view/09_welcometoupdate.tmpl
+++ b/install/view/09_welcometoupdate.tmpl
@@ -2,7 +2,8 @@
 
 {block name="box"}
 	<div class="{$textclass}">
-		{Label installer.title.welcomeToTodoyuUpdate}<br />
+		<span class="title"><strong>{Label installer.title.welcomeToTodoyuUpdate}</strong></span>
+		<br /><br /><br />
 		{Label installer.updateSteps}:
 		<ul>
 			<li>{Label installer.generalUpdate}: {Label installer.updateDbChanges} ({constant(TODOYU_VERSION)})</li>
