--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -11,7 +11,7 @@
 	<body>
 		<div id="box">
 			<div id="panel">{* ------------ Panel -------------- *}
-				<!-- {include "progress.tmpl"} -->
+				{include "progress.tmpl"}
 				<div class="content">
 					<span class="lt"></span><span class="rt"></span>
 					<h1><span class="title">Todoyu 2.0</span><span class="rgt"></span></h1>
