--- a/install/view/02_servercheck.tmpl
+++ b/install/view/02_servercheck.tmpl
@@ -1,6 +1,8 @@
 {extends main.tmpl}
 
 {block name="box"}
+	<strong>{Label installer.servercheckResults}</strong>
+	<br /><br />
 	<table width="500" border="0" cellspacing="0" cellpadding="5">
 		<tr>
 			<td width="148">PHP version &gt;= 5.2</td>
