* implemented check over existing DBs into installer's DB creating step

--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -22,7 +22,10 @@
 			</tr>
 			<tr>
 				<td>or create new:</td>
-				<td><input onkeyup="TodoyuInstaller.checkDbSelect()" type="text" id="database_new" name="database_new" /></td>
+				<td>
+					<input onkeyup="TodoyuInstaller.checkDbSelect()" type="text" id="database_new" name="database_new" />
+					<span id="error-newnameTaken" style="display:none;" class="error">This name is already taken!</span>
+				</td>
 			</tr>
 		</table>
 {/block}
