--- a/install/view/01_license.tmpl
+++ b/install/view/01_license.tmpl
@@ -1,6 +1,7 @@
 {extends main.tmpl}
 
 {block name="box"}
+	<span class="title">{Label installer.title.welcomeToInstaller}</span>
 	<div id="licenseagreement">
 		<h2>{Label installer.title.license}</h2>
 		<div class="enduserlicense"><pre>{include "../../LICENSE.txt"}</pre></div>
