--- a/install/view/02_servercheck.tmpl
+++ b/install/view/02_servercheck.tmpl
@@ -1,8 +1,7 @@
 {extends main.tmpl}
 
 {block name="box"}
-	<strong>{Label installer.servercheckResults}</strong>
-	<br /><br />
+	<span class="title">{Label installer.servercheckResults}</span>
 	<table width="500" border="0" cellspacing="0" cellpadding="5">
 		<tr>
 			<td width="148">PHP version &gt;= 5.2</td>
