--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -4,11 +4,13 @@
 		{if $hasError == 1}
 			<strong>Database creation / select failed please correct the setup</strong>
 		{else}
-			 <span style="padding:0 0 0 30px; width:300px;" class="servercheckicon ok">
-				<strong>Database server connection validated.</strong>
+			<span class="title">
+				<span style="padding:0 0 0 30px; width:300px;" class="servercheckicon ok">
+					Database server connection validated.
+				</span>
 			</span> 
 		{/if}
-		<br /><br />
+		<br />
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
 				<td width="109">Select a Database</td>
