--- a/install/view/09_welcometoupdate.tmpl
+++ b/install/view/09_welcometoupdate.tmpl
@@ -2,8 +2,7 @@
 
 {block name="box"}
 	<div class="{$textclass}">
-		<span class="title"><strong>{Label installer.title.welcomeToTodoyuUpdate}</strong></span>
-		<br /><br /><br />
+		<span class="title">{Label installer.title.welcomeToTodoyuUpdate}</span>
 		{Label installer.updateSteps}:
 		<ul>
 			<li>{Label installer.generalUpdate}: {Label installer.updateDbChanges} ({constant(TODOYU_VERSION)})</li>
