--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -2,18 +2,18 @@
 
 {block name="box"}
 		{if $hasError == 1}
-			<strong>Database creation / select failed please correct the setup</strong>
+			<strong>{Label installer.error.dbServerConnectionFailed}</strong>
 		{else}
 			<span class="title">
 				<span style="padding:0 0 0 30px; width:300px;" class="servercheckicon ok">
-					Database server connection validated.
+					{Label installer.title.dbServerConnectionValidated}
 				</span>
 			</span> 
 		{/if}
 		<br />
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
-				<td width="109">Select a Database</td>
+				<td width="109">{Label installer.selectDB}</td>
 				<td width="379">
 					<select name="database" type="text" id="database" value="{$fields.server}">
 			{foreach $options key option}
@@ -21,12 +21,11 @@
 			{/foreach}
 					</select>	 
 				</td>
-			</tr>
-			<tr>
-				<td>or create new:</td>
+			</tr><tr>
+				<td>{Label installer.orCreateDB}</td>
 				<td>
 					<input onkeyup="TodoyuInstaller.checkDbSelect()" type="text" id="database_new" name="database_new" />
-					<span id="error-newnameTaken" style="display:none;" class="error">This name is already taken!</span>
+					<span id="error-newnameTaken" style="display:none;" class="error">{Label installer.error.nameTaken}</span>
 				</td>
 			</tr>
 		</table>
