--- a/install/view/06_systemconfig.tmpl
+++ b/install/view/06_systemconfig.tmpl
@@ -1,6 +1,7 @@
 {extends main.tmpl}
 
 {block name="box"}
+		<span class="title">{Label installer.title.systemConfig}</span>
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
 				<td width="109">{Label installer.systemName} *</td>
