--- a/install/view/11_genericupdates.tmpl
+++ b/install/view/11_genericupdates.tmpl
@@ -1,8 +1,8 @@
 {extends main.tmpl}
 
 {block name="box"}
+	<span class="title">{Label installer.title.doneGenericChanges}</span>
 	<div class="{$textclass}">
-		<span class="title">{Label installer.title.detectedUpdateCoreChanges}</span>
 		<div class="sqlQuery">
 			<ul>
 			{foreach $diffs dbTable columns}
