--- a/core/view/form/FormElement_Select.tmpl
+++ b/core/view/form/FormElement_Select.tmpl
@@ -2,8 +2,6 @@
 
 {block name="field"}
 <select name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $disabled}disabled="disabled"{/if} {$extraAttributes}>
-{foreach $options option}
-	<option value="{$option.value}" {if in_array($option.value, $value)}selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
-{/foreach}
+	{include "core/view/form/FormElement_Select_Options.tmpl"}
 </select>
 {/block}
